--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -1,10 +1,17 @@
 # Global LLM configuration
 [llm]
-model = "claude-3-7-sonnet-20250219"       # The LLM model to use
-base_url = "https://api.anthropic.com/v1/" # API endpoint URL
-api_key = "YOUR_API_KEY"                   # Your API key
+model = "deepseek-chat"       # The LLM model to use
+base_url = "https://api.deepseek.com" # API endpoint URL
+api_key = "sk-c5bb35c0042c4591ac252161314066cf"                   # Your API key
 max_tokens = 8192                          # Maximum number of tokens in the response
 temperature = 0.0                          # Controls randomness
+
+# [llm]
+# model = "claude-3-7-sonnet-20250219"       # The LLM model to use
+# base_url = "https://api.anthropic.com/v1/" # API endpoint URL
+# api_key = "YOUR_API_KEY"                   # Your API key
+# max_tokens = 8192                          # Maximum number of tokens in the response
+# temperature = 0.0                          # Controls randomness
 
 # [llm] # Amazon Bedrock
 # api_type = "aws"                                       # Required
@@ -31,13 +38,13 @@ temperature = 0.0                          # Controls randomness
 # max_tokens = 4096
 # temperature = 0.0
 
-# Optional configuration for specific LLM models
-[llm.vision]
-model = "claude-3-7-sonnet-20250219"       # The vision model to use
-base_url = "https://api.anthropic.com/v1/" # API endpoint URL for vision model
-api_key = "YOUR_API_KEY"                   # Your API key for vision model
-max_tokens = 8192                          # Maximum number of tokens in the response
-temperature = 0.0                          # Controls randomness for vision model
+# # Optional configuration for specific LLM models
+# [llm.vision]
+# model = "claude-3-7-sonnet-20250219"       # The vision model to use
+# base_url = "https://api.anthropic.com/v1/" # API endpoint URL for vision model
+# api_key = "YOUR_API_KEY"                   # Your API key for vision model
+# max_tokens = 8192                          # Maximum number of tokens in the response
+# temperature = 0.0                          # Controls randomness for vision model
 
 # [llm.vision] #OLLAMA VISION:
 # api_type = 'ollama'
